--- a/admin_AtherHouse/src/App.css
+++ b/admin_AtherHouse/src/App.css
@@ -5,8 +5,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-html, body {
+
+
+
+body{
   margin: 0;
-  padding: 0;
-  overflow-x: hidden;
 }
