--- a/admin_AtherHouse/src/components/header/Header.css
+++ b/admin_AtherHouse/src/components/header/Header.css
@@ -1,8 +1,8 @@
 .header {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 300px; /* bằng width sidebar */
-  right: 0;
+  left: 300px; 
+  right: 0; */
   height: 80px;
   background: #fff;
   border-bottom: 1px solid #e5e7eb;
