--- a/admin_AtherHouse/src/components/sidebar/Sidebar.css
+++ b/admin_AtherHouse/src/components/sidebar/Sidebar.css
@@ -1,4 +1,4 @@
-.sidebar {
+/* .sidebar {
   width: 300px;
   height: 100vh;
   background: #fff;
@@ -6,26 +6,22 @@
   padding: 20px 15px;
   position: fixed;
   top: 0;
-  left: 0;
+  left: 0; 
   overflow-y: auto;
-}
+} */
 
 .sidebar-header {
-  align-items: center;
-  margin-left: 50px;
-  font-weight: bold;
-  font-size: 18px;
-  color: #111827;
+  display: block;
 }
-.sidebar-header .avatar {
-  width: 130px;      /* chiều ngang logo */
-  height: 70px;      /* chiều cao logo */
-  border-radius: 8px; /* bo góc nhẹ nếu muốn */
-  object-fit: cover; /* giữ tỷ lệ ảnh đầy khung */
+
+
+.logo_sidebarr  {
+   
+  object-fit: cover; 
 }
 
 .section-title {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 600;
   color: #9ca3af;
   margin: 15px 0 8px 10px;
@@ -41,13 +37,13 @@
   margin-bottom: 6px;
 }
 
-/* link & dropdown button */
+
 .sidebar-menu a,
 .dropdown-btn {
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 10px 12px;
+  padding: 10px 0;
   border-radius: 8px;
   color: #374151;
   text-decoration: none;
@@ -60,14 +56,13 @@
   text-align: left;
 }
 
-/* hover = xám */
+/*
 .sidebar-menu a:hover,
 .dropdown-btn:hover {
   background: #f3f4f6;
   color: #111827;
 }
 
-/* active = xanh */
 .sidebar-menu a.active,
 .submenu a.active {
   background: #4f46e5;
@@ -91,7 +86,7 @@
   color: #6b7280;
 }
 
-/* Submenu */
+
 .submenu {
   list-style: none;
   padding-left: 35px;
@@ -120,4 +115,4 @@
   display: block;
   padding: 5px 10px;
 }
-
+ */
