--- a/admin_AtherHouse/src/App.css
+++ b/admin_AtherHouse/src/App.css
@@ -1,4 +1,12 @@
-/* Reset */
+:root{
+    --black-color: #000000;
+    --white-color: #ffffff;
+    --orange-color:#E95C20;
+    --gray-color: #999999;
+    --gray1-color:rgb(248, 248, 248);
+    --text-color: #9c9a9a;
+   
+}
 * {
   margin: 0;
   padding: 0;
