--- a/admin_AtherHouse/src/pages/Auth/Auth.css
+++ b/admin_AtherHouse/src/pages/Auth/Auth.css
@@ -165,12 +165,12 @@
 /* Text */
 .login-text {
   margin-top: 20px;
-  font-size: 14px;
+  font-size: 1.2rem;
   color: #6b7280;
 }
 
 .login-text a {
-  color: #4f46e5;
+  color: var(--orange-color);
   text-decoration: none;
   font-weight: 500;
 }
@@ -189,8 +189,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  /* sharp band */
-/* mềm, fade dần ở mép trên & dưới */
 background: linear-gradient(
   to bottom,
   rgba(0,0,0,.9) 0%,
