--- a/admin_AtherHouse/src/App.css
+++ b/admin_AtherHouse/src/App.css
@@ -5,7 +5,8 @@
     --gray-color: #999999;
     --gray1-color:rgb(248, 248, 248);
     --text-color: #9c9a9a;
-   
+    --delete-button:  #ad0000;
+    --update-button:  #00c220;
 }
 * {
   margin: 0;
@@ -15,7 +16,9 @@
 }
 
 
-
+/* 1rem = 10px */
 body{
   margin: 0;
+  font-size: 62.5%;   
+  line-height: 1.6;
 }
