--- a/admin/src/components/header/Header.css
+++ b/admin/src/components/header/Header.css
@@ -1,16 +1,16 @@
 .header {
-  /* position: fixed;
-  top: 0;
-  left: 300px; 
-  right: 0; */
-  height: 80px;
-  background: #fff;
-  border-bottom: 1px solid #e5e7eb;
+  position: sticky;
+  top:0;
+  right: 0;
+  width: 100%;
+  height: 5rem;
+  background: var(--blue-color1);
+  border-bottom: 0.2rem solid var(--blue-color2);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
-  z-index: 1000;
+  padding: 1rem;
+  z-index: 10;
 }
 
 /* LEFT */
@@ -129,37 +129,48 @@
 
 /* USER */
 .user {
+  /* background-color: var(--black-color); */
   position: relative;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   gap: 8px;
   cursor: pointer;
-  padding: 4px 8px;
+  padding: 0.5rem;
   border-radius: 8px;
-  transition: background 0.2s;
+  /* transition: background 0.2s;
+   */
 }
 
-.user:hover {
-  background: #f9fafb;
-}
+  /* .user:hover {
+    background: #f9fafb;
+  } */
 
-.avatar {
+.avatar_header {
   border-radius: 50%;
-  width: 38px;
-  height: 38px;
-  object-fit: cover;
+  width: 2.8rem;
+  height: 2.8rem;
+  /* object-fit: cover; */
+  overflow: hidden;
 }
+.avatar_img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: contain; */
+}
+/* .avatar_header:hover {
+  border: 0.2rem solid var(--black-color);
+} */
 
-.username {
+/* .username {
   font-size: 14px;
   font-weight: 500;
-  color: #111827;
-}
+  color: var(--white-color);
+} */
 
-.arrow-head {
+/* .arrow-head {
   font-size: 24px;
   color: #6b7280;
-}
+} */
 
 /* DROPDOWN */
 .dropdown {
