--- a/admin/src/components/header/Header.css
+++ b/admin/src/components/header/Header.css
@@ -8,7 +8,7 @@
   border-bottom: 0.2rem solid var(--blue-color2);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 1rem;
   z-index: 10;
 }
@@ -128,7 +128,7 @@
 }
 
 /* USER */
-.user {
+.user_header {
   /* background-color: var(--black-color); */
   position: relative;
   /* display: flex;
