--- a/admin/src/components/sidebar/Sidebar.css
+++ b/admin/src/components/sidebar/Sidebar.css
@@ -7,7 +7,7 @@
 }
 
 .username_sidebar{
-  font-size: 1.5rem;
+  font-size: 0.8rem;
   color: var(--white-color);
 }
 /* .logo_sidebar{
@@ -30,7 +30,7 @@
 .section-title {
   font-size: 16px;
   font-weight: 600;
-  color: #9ca3af;
+  color: var(--white-color);
   margin: 15px 0 8px 10px;
 }
 
@@ -52,7 +52,7 @@
   gap: 10px;
   padding: 10px 10px;
   border-radius: 8px;
-  color: #374151;
+  color: var(--white-color);
   text-decoration: none;
   transition: background 0.2s, color 0.2s;
   font-size: 15px;
@@ -66,14 +66,14 @@
 
 .sidebar-menu a:hover,
 .dropdown-btn:hover {
-  background: #f3f4f6;
-  color: #111827;
+  background: var(--blue-color2);
+  color: var(--white-color);
 }
 
 .sidebar-menu a.active,
 .submenu a.active {
-  background: #4f46e5;
-  color: #fff;
+  background: var(--white-color);
+  color: var(--blue-color1);
   font-weight: 500;
   padding: 10px 10px;
 
