--- a/admin/src/pages/home/Dashbroad.css
+++ b/admin/src/pages/home/Dashbroad.css
@@ -1,7 +1,8 @@
 .dashboard {
   padding:  1rem; 
   background-color: var(--blue-color1);
-  height: 100vh;
+  max-height: 100vh;
+  height: 100%;
 }
 
 .cards {
