--- a/admin/src/pages/stores/Stores.css
+++ b/admin/src/pages/stores/Stores.css
@@ -257,7 +257,10 @@ textarea {
 .form-group.upload label span {
   margin-top: 8px;
 }
-
+.btn-row{
+  display: flex;
+  justify-content: right;
+}
 /* Nút Save căn phải */
 .submit-btn {
   padding: 12px 30px;
@@ -274,6 +277,24 @@ textarea {
 }
 
 .submit-btn:hover {
+  background-color: #4338ca;
+}
+.cancel-btn {
+  margin-left: 2rem;
+  padding: 12px 30px;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  border-radius: 10px;
+  background-color: #4f46e5;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.2s;
+  margin-top: 20px;
+  align-self: flex-end; /* căn phải */
+}
+
+.cancel-btn:hover {
   background-color: #4338ca;
 }
 
