--- a/admin/src/pages/voucher/Voucher.css
+++ b/admin/src/pages/voucher/Voucher.css
@@ -72,6 +72,11 @@
 .btn.add {
   background: #4f46e5;
   color: #fff;
+  box-shadow: 0 4px 14px rgba(76, 111, 255, 0.4);
+}
+.btn.add:hover {
+  background-color: #3f5fe2;
+  color: #fff;
 }
 
 .btn.export {
@@ -121,7 +126,7 @@
 }
 
 .button_wrapper .btn3 {
-  background: #2563eb; /* xanh dương custom */
+  background: #2563eb; 
 }
 
 .button_wrapper .btn:disabled {
